# DRON

./: .gitignore  AUDIT_TERRAIN_NAVIGATOR.md  CHECKPOINT_INPUT_GUIDE.md  COMMIT_REVIEW_ERRORS.md  HANDOFF_CURRENT_STATE.md  HUMAN2_IMPLEMENTATION_FULL.md  IMPLEMENTATION_GUIDE.md  PROBLEM_SOLUTION_MAP.md  README.md  SECURITY_DIFF_REVIEW.md  benchmark_correlator.py  case_reader.py  case_runner.py  checkpoint_runner.py  constants.py  correlation_fallback.py  correlator.py  dem_loader.py  eskf.py  imm_filter.py  integration_test.py  local_frame.py  main.py  measurement_layer.py  nmea_parser.py  position_solver.py  profile_extractor.py  pytest.ini  requirements.txt  run_standard_replay.ps1  sample_ingest.py  sample_validator.py  sensor_fusion.py  sim_generator.py  sitl_bridge.py  terrain_pf.py  test_benchmark_correlator.py  test_case_reader.py  test_case_runner.py  test_checkpoint_runner.py  (+22 more)
assets/: adriadna_dashboard.css
backend/: __init__.py  app.py  data_service.py  demo_fallback.py  metrics_service.py  replay_service.py  schemas.py  state.py
data/simple_check/: params.txt  simple_dem.tif  simple_heights.txt
frontend/: FRONTEND_HANDOFF.md  index.html  package.json
frontend/src/: styles.css  types.ts
input/: README.md
input/incoming/: barometer.csv  (+3 more)
prompts/: generate_large_gpgga_dataset.txt  generate_large_gpgga_dataset_claude_strict.txt
scripts/: build_cpp_backend.ps1  clean_cache.py  preflight.py  run_case_nmea_demo.ps1  stress_test_million_samples.py
terrain_nav_core/: CMakeLists.txt  __init__.py  bindings.cpp  correlation_core.cpp  correlation_core.hpp
(+9 files in other folders)
